--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ asides: true
 -->
 {% include content-post.html %}
 
-<ul class="tag_box inline">
+<ul class="tag_box inline" itemprop="keywords">
     {% if page.tags.first != null %}{% comment %} If tags exist {% endcomment %}
         {% for tag in page.tags %}{% comment %} add an element like the following for each tag item {% endcomment %}
             <li class="btn btn-mini"><a href="/blog/tags/#{{ tag }}">{{ tag }}{% comment %} This is just the tag name {% endcomment %}
