--- a/_layouts/linklog.html
+++ b/_layouts/linklog.html
@@ -11,7 +11,7 @@ asides: true
 <ul class="tag_box inline" itemprop="keywords">
     {% if page.tags.first != null %}{% comment %} If tags exist {% endcomment %}
         {% for tag in page.tags %}{% comment %} add an element like the following for each tag item {% endcomment %}
-            <li class="btn btn-mini"><a href="/blog/tags/#{{ tag }}">{{ tag }}{% comment %} This is just the tag name {% endcomment %}
+            <li class="btn btn-mini"><a href="/blog/tags/#{{ tag }}"><span itemprop="keywords">{{ tag }}</span>{% comment %} This is just the tag name {% endcomment %}
             <span>{{ tag.size }}</span>{% comment %} This counts the number of posts in a given tag {% endcomment %}
             </a></li>
         {% endfor %}
