--- a/_includes/asides/around_web.html
+++ b/_includes/asides/around_web.html
@@ -2,7 +2,7 @@
   <h1>Around the Web</h1>
   <ul id="around_web">
       <li><a href="https://github.com/bcomnes">Github</a></li>
-      <li><a href="http://www.flickr.com/">Flickr</a></li>
+      <li><a href="http://www.flickr.com/photos/bretc/">Flickr</a></li>
       <li><a href="http://steamcommunity.com/id/bret/">Steam</a></li>
       <li>bretolius on <a href="http://freenode.net/">Freenode</a>
           <p><small>IRC messages are pushed to my mobile</small></p></li>
