--- a/_includes/content-post.html
+++ b/_includes/content-post.html
@@ -2,12 +2,13 @@
 <article class="post" itemprop='blogPost' itemscope itemtype="http://schema.org/BlogPosting">
 <header>
 <hgroup>
-<h1 itemprop="name">
+<h1 itemprop="name headline">
 <a href="{% include logic/pp-url.html %}" itemprop="url">{% include logic/pp-title.html %}</a>
 </h1>
 <h2><small>
 <time datetime="{% include logic/pp-date-xml.html %}" itemprop="datePublished">{% include logic/pp-date-str.html %}</time>
 </small></h2>
+<meta itemprop="author" content="{% include logic/pp-post-author.html %}">
 </hgroup>
 </header>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
