--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <!-- ================================================================ -->
 <!-- Footer -->
-<footer class="footer">
+<footer class="footer" itemprop="WPFooter">
     <div class="container">
             <p class="muted credit">Currently being assembled by <a href="/about" itemprop="author">{{ site.author }}</a>.</p>
             <p class="muted credit">View the website <a href="https://github.com/bcomnes/bcomnes.github.com">source</a></p>
