--- a/_includes/content-post.html
+++ b/_includes/content-post.html
@@ -8,7 +8,7 @@
 <h2><small>
 <time datetime="{% include logic/pp-date-xml.html %}" itemprop="datePublished">{% include logic/pp-date-str.html %}</time>
 </small></h2>
-<meta itemprop="author" content="{% include logic/pp-post-author.html %}">
+{% include logic/pp-post-author.html %}
 </hgroup>
 </header>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
