Included a tagbox include

--- a/_includes/content-linklog.html
+++ b/_includes/content-linklog.html
@@ -10,6 +10,7 @@
 <time datetime="{% include logic/pp-date-xml.html %}" itemprop="datePublished">{% include logic/pp-date-str.html %}</time>
 &bull; <a rel="bookmark" href="{% include logic/pp-url.html %}">{% if site.permalink_marker %}{{ site.permalink_marker }}{% else %}&#8734;{% endif %}</a>
 </small></h2>
+{% include logic/pp-post-author.html %}
 </hgroup>
 </header>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
@@ -17,5 +18,8 @@
 {% include logic/pp-content.html %}
 </section>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+<asside>
+    {% include tag_box.html %}
+</asside>
 </article>
 <!--End Linklog "{% include logic/pp-title.html %}"-->
