--- a/_includes/content-post.html
+++ b/_includes/content-post.html
@@ -16,5 +16,8 @@
 {% include logic/pp-content.html %}
 </section>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+<asside>
+    {% include tag_box.html %}
+</asside>
 </article>
 <!--End Post "{% include logic/pp-title.html %}"-->
