--- a/_includes/asides/recent_posts.html
+++ b/_includes/asides/recent_posts.html
@@ -3,7 +3,7 @@
   <ul id="recent_posts">
     {% for post in site.posts limit: site.recent_posts %}
       <li class="post">
-        <a href="{{ post.url }}">{{ post.title }}</a>
+        {{ post.date | date: "%b %e" }} &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
       </li>
     {% endfor %}
   </ul>
