--- a/assets/css/mods.css
+++ b/assets/css/mods.css
@@ -75,6 +75,11 @@ article header time {
     text-transform: uppercase;
 }
 
+article header h3 {
+    line-height: 0px;
+    margin-top: 10px;
+}
+
 /* Linklog Specifics 
 -------------------------------------------------- */
 /* Resize of the linklog Title */
@@ -189,7 +194,7 @@ article.linklog header h2 small {
     margin-bottom: 5px;
 }
 
-.tag_box a span{
+.tag_box .tag-count{
 	vertical-align:super;
 	font-size:0.8em;
 }
