Fixed tagbox and added icon

--- a/_includes/content-linklog.html
+++ b/_includes/content-linklog.html
@@ -18,8 +18,6 @@
 {% include logic/pp-content.html %}
 </section>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-<asside>
-    {% include tag_box.html %}
-</asside>
+{% include logic/pp-tagbox.html %}
 </article>
 <!--End Linklog "{% include logic/pp-title.html %}"-->
