--- a/_includes/content-post.html
+++ b/_includes/content-post.html
@@ -16,8 +16,6 @@
 {% include logic/pp-content.html %}
 </section>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-<asside>
-    {% include tag_box.html %}
-</asside>
+{% include logic/pp-tagbox.html %}
 </article>
 <!--End Post "{% include logic/pp-title.html %}"-->
