--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 asides: true
+tagbox: true
 ---
 <!-- ================================================================ -->
 <!-- Post -->
