added bing site verification

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -9,3 +9,4 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Google webmaster tools-->
     <meta name="google-site-verification" content="1xXlZT_U_pGHsfrScC5v0cg5uydc53RXNLmX-1gXa44" />
+	<meta name="msvalidate.01" content="8C03EAC159FD742794668D7663E86AED" />
