Renamed tagbox to post footer

--- a/_includes/logic/pp-post-footer.html
+++ b/_includes/logic/pp-post-footer.html
@@ -1,3 +1,4 @@
 {% if post.tagbox or page.tagbox == true  %}<footer>
     {% include tag_box.html %}
-</footer>{% endif  %}
+	{% include post_crumb.html %}
+</footer>{% endif %}
