Finished up post footer rename

--- a/_includes/content-linklog.html
+++ b/_includes/content-linklog.html
@@ -18,6 +18,6 @@
 {% include logic/pp-content.html %}
 </section>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-{% include logic/pp-tagbox.html %}
+{% include logic/pp-post-footer.html %}
 </article>
 <!--End Linklog "{% include logic/pp-title.html %}"-->
