--- a/_includes/content-post.html
+++ b/_includes/content-post.html
@@ -16,6 +16,6 @@
 {% include logic/pp-content.html %}
 </section>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-{% include logic/pp-tagbox.html %}
+{% include logic/pp-post-footer.html %}
 </article>
 <!--End Post "{% include logic/pp-title.html %}"-->
