--- a/_includes/asides/around_web.html
+++ b/_includes/asides/around_web.html
@@ -2,6 +2,7 @@
   <h1>Around the Web</h1>
   <ul id="around_web">
       <li><i class="icon-envelope"></i> <script type="text/javascript" src="/assets/js/email.js" itemprop="email" > </script></li>
+      <li><i class="icon-home"></i> <a href="http://web.pdx.edu/~bcomnes/">PSU</a></li>
       <li><i class="icon-barcode"></i> <a href="https://github.com/bcomnes">Github</a></li>
       <li><i class="icon-picture"></i> <a href="http://www.flickr.com/photos/bretc/">Flickr</a></li>
       <li><i class="icon-user"></i> <a href="http://steamcommunity.com/id/bret/">Steam</a></li>
