Fixed some crap showing up in atom feed

--- a/_includes/content-linklog.html
+++ b/_includes/content-linklog.html
@@ -4,7 +4,7 @@
 <hgroup>
 <h1 itemprop="name headline">
 <a href="{% include logic/pp-external-url.html %}" itemprop="url">{% include logic/pp-title.html %}</a>
-<small class='linklog-marker'>{{ site.linklog }}</small>
+<span class='linklog-marker'>{{ site.linklog }}</span>
 </h1>
 <h2><small>
 <time datetime="{% include logic/pp-date-xml.html %}" itemprop="datePublished">{% include logic/pp-date-str.html %}</time>
