Another attempt at schema fixing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<header itemscope itemtype="http://schema.org/WebPageElement" itemprop="WPHeader">
+<header itemscope itemtype="http://schema.org/WPHeader">
 {% include navbar.html %}
 </header>
 
