attempt at fixing keywords

--- a/_includes/tag_box.html
+++ b/_includes/tag_box.html
@@ -1,4 +1,4 @@
-<ul class="tag_box inline" itemprop="keywords">
+<ul class="tag_box inline">
     {% if page.tags.first != null %}{% comment %} If tags exist {% endcomment %}
     <li><i class="icon-tags"></i></li>
         {% for tag in page.tags %}{% comment %} add an element like the following for each tag item {% endcomment %}
