--- a/_includes/asides/around_web.html
+++ b/_includes/asides/around_web.html
@@ -4,7 +4,7 @@
       <li><i class="icon-envelope"></i> <script type="text/javascript" src="/assets/js/email.js" itemprop="email" > </script></li>
       <li><i class="icon-home"></i> <a rel="me" href="http://web.pdx.edu/~bcomnes/">PSU</a></li>
       <li><i class="icon-barcode"></i> <a rel="me" href="https://github.com/bcomnes">Github</a></li>
-      <li><i class="icon-picture"></i> <a rel="me" href="http://www.flickr.com/photos/bretc/">Flickr</a></li>
+      <li><i class="icon-picture"></i> <a rel="me" href="http://www.flickr.com/people/bretc/">Flickr</a></li>
       <li><i class="icon-user"></i> <a rel="me" href="http://steamcommunity.com/id/bret/">Steam</a></li>
       <li><i class="icon-comment"></i> bretolius on <a href="http://freenode.net/">Freenode</a>
           <p><small>IRC messages are pushed to my mobile</small></p></li>
