fixed simple details in assides

--- a/_includes/asides/around_web.html
+++ b/_includes/asides/around_web.html
@@ -6,7 +6,7 @@
       <li><i class="icon-barcode"></i> <a rel="me" href="https://github.com/bcomnes">Github</a></li>
       <li><i class="icon-picture"></i> <a rel="me" href="http://www.flickr.com/people/bretc/">Flickr</a></li>
       <li><i class="icon-user"></i> <a rel="me" href="http://steamcommunity.com/id/bret/">Steam</a></li>
-      <li><i class="icon-comment"></i> bretolius on <a href="http://freenode.net/">Freenode</a>
+      <li><i class="icon-comment"></i> bret on <a href="http://freenode.net/">Freenode</a>
           <p><small>IRC messages are pushed to my mobile</small></p></li>
   </ul>
 </section>
