--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -10,3 +10,5 @@
     <!--Google webmaster tools-->
     <meta name="google-site-verification" content="1xXlZT_U_pGHsfrScC5v0cg5uydc53RXNLmX-1gXa44" />
 	<meta name="msvalidate.01" content="8C03EAC159FD742794668D7663E86AED" />
+    <link rel="pingback" href="http://pingback.me/bcomnes/xmlrpc" />
+    <link rel="http://webmention.org/" href="http://pingback.me/bcomnes/webmention" />
