Added spammer warning.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
 </header>
 
 <section class="container" itemscope itemtype="http://schema.org/Blog">
+{% include warning.html %}
 {{ content }}
 {% if page.asides == true %}{% include asides.html %}{% endif %}
 </section>
