I think I removed all the microdata.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <!-- ================================================================ -->
 <!-- Footer -->
-<footer class="footer" itemscope itemtype="http://schema.org/WPFooter">
+<footer class="footer">
     <div class="container">
-            <p class="muted credit">Currently being assembled by <a href="/about" itemprop="author">{{ site.author }}</a>.</p>
+            <p class="muted credit">Currently being assembled by <a href="/about">{{ site.author }}</a>.</p>
             <p class="muted credit">View the website <a href="https://github.com/bcomnes/bcomnes.github.com">source</a></p>
 			<a href="http://indiewebcamp.com/"><img src="/assets/ico/indiewebcamp-button.png" alt="IWC logo"></img></a>
     </div>   
