--- a/_includes/asides/around_web.html
+++ b/_includes/asides/around_web.html
@@ -1,7 +1,7 @@
 <section class="span3">
   <h1>Around the Web</h1>
   <ul id="around_web">
-      <li><i class="icon-envelope"></i> <script type="text/javascript" src="/assets/js/email.js" itemprop="email" > </script></li>
+      <li><i class="icon-envelope"></i> <script type="text/javascript" src="/assets/js/email.js"> </script></li>
       <li><i class="icon-home"></i> <a rel="me" href="http://web.pdx.edu/~bcomnes/">PSU</a></li>
       <li><i class="icon-barcode"></i> <a rel="me" href="https://github.com/bcomnes">Github</a></li>
       <li><i class="icon-picture"></i> <a rel="me" href="http://www.flickr.com/people/bretc/">Flickr</a></li>
