--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,7 +3,7 @@
 <!--
     TODO Fix HTML5 Schematics here
 -->
-<nav class="navbar navbar-inverse navbar-fixed-top" itemscope itemtype="http://schema.org/SiteNavigationElement">
+<nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -15,7 +15,7 @@
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     {% if page.url == "/index.html" %}<li class="active"><a href="#">Blog</a></li>{% else %}<li class=""><a href="/">Blog</a></li>{% endif %}
-                    <li class={% if page.url == "/about/" %}"active"{% else %}""{% endif %} itemscope itemtype="http://schema.org/AboutPage"><a href="/about/" itemprop="url">About</a></li>
+                    <li class={% if page.url == "/about/" %}"active"{% else %}""{% endif %}><a href="/about/">About</a></li>
                     {% if page.url == "/pages/projects/" %}<li class="active"><a href="#">Projects</a></li>{% else %}<li class=""><a href="/pages/projects/">Projects</a></li>{% endif %}
                     {% if page.url == "/pages/tags/" %}<li class="active"><a href="#">Tags</a></li>{% else %}<li class=""><a href="/pages/tags/">Tags</a></li>{% endif %}
                     {% if page.url == "/pages/archive/" %}<li class="active"><a href="#">Archive</a></li>{% else %}<li class=""><a href="/pages/archive/">Archive</a></li>{% endif %}
