--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="/cache.manifest" itemscope itemtype="http://schema.org/WebPage">
+<html lang="en" manifest="/cache.manifest">
 <head>
 {% include meta.html %}
 
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-<header itemscope itemtype="http://schema.org/WPHeader">
+<header>
 {% include navbar.html %}
 </header>
 
-<section class="container" itemscope itemtype="http://schema.org/Blog">
+<section class="container">
 {{ content }}
 {% if page.asides == true %}{% include asides.html %}{% endif %}
 </section>
