--- a/_includes/asides.html
+++ b/_includes/asides.html
@@ -1,7 +1,9 @@
 <!-- ================================================================ -->
 <!-- Assides -->
+<div class="container">
 <aside class="well well-small row" id="assides">
         {% include asides/pinboard.html %}
         {% include asides/recent_posts.html %}
         {% include asides/around_web.html %}
 </aside>
+</div>
