--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,12 @@
 
 <section class="container">
 {{ content }}
-{% if page.asides == true %}{% include asides.html %}{% endif %}
 </section>
 
+<div class="vcard">
+{% if page.asides == true %}{% include asides.html %}{% endif %}
 {% include footer.html %}
+</div>
 {% include js.html %}
 </body>
 </html>
