--- a/_includes/asides/around_web.html
+++ b/_includes/asides/around_web.html
@@ -8,6 +8,6 @@
       <li><i class="icon-user"></i> <a class="url" rel="me" href="http://steamcommunity.com/id/bret/">Steam</a></li>
       <li><i class="icon-comment"></i> <span class="nickname">bret</span> on <a href="irc://chat.us.freenode.net:+7000">Freenode</a>
           <p><small>IRC messages are pushed to my mobile</small></p></li>
-	  <li>Ƀitcoin: <a href="bitcoin:1DtDQM65KkrGjVQ8BsCdujZREoJNmt4JJf">1DtDQM65KkrGjVQ8BsCdujZREoJNmt4JJf</a></li>
+	  <li>Ƀ: <a href="bitcoin:1DtDQM65KkrGjVQ8BsCdujZREoJNmt4JJf">1DtDQM65KkrGjVQ8BsCdujZREoJNmt4JJf</a></li>
   </ul>
 </address>
