Added phone number for authentication

--- a/_includes/asides/elsewhere.html
+++ b/_includes/asides/elsewhere.html
@@ -9,5 +9,6 @@
       <li><i class="icon-comment"></i> <span class="nickname">bret</span> on <a href="irc://chat.us.freenode.net:+7000">Freenode</a>
           <p><small>IRC messages are pushed to my mobile</small></p></li>
 	  <li>Ƀ: <a href="bitcoin:1DtDQM65KkrGjVQ8BsCdujZREoJNmt4JJf">1DtDQM65KkrGjVQ8BsCdujZREoJNmt4JJf</a></li>
+	  <li><i class="icon-fire"></i> <a class="tel" rel="me" href="sms:+17076334552">(707) 633-4552</a></li>
   </ul>
 </address>
