--- a/_includes/asides.html
+++ b/_includes/asides.html
@@ -4,6 +4,6 @@
 <aside class="well well-small row" id="assides">
         {% include asides/pinboard.html %}
         {% include asides/recent_posts.html %}
-        {% include asides/around_web.html %}
+        {% include asides/elsewhere.html %}
 </aside>
 </div>
