--- a/_includes/posterator.html
+++ b/_includes/posterator.html
@@ -4,6 +4,8 @@
 {% include content-post.html %}
 {% when 'linklog' %}
 {% include content-linklog.html %}
+{% when 'note' %}
+{% include content-note.html %}
 {% else %}
 {% include content-post.html %}
 {% endcase %}
