--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -9,7 +9,10 @@ tagbox: false
 {% include logic/pp-content.html %}
 </section>
 <footer>
-<time class="dt-published" datetime="{% include logic/pp-date-xml.html %}">{% include logic/pp-date-str.html %}</time>
-<a class="u-in-reply-to" href="{{ post.in-reply-to-url }}">{{ page.in-reply-to-url }}</a>
+<ul>
+<li><time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_string }}</time> &bull; {% if post.title %}<a rel="bookmark" class="u-url" href="{% include logic/pp-url.html %}">{% endif %}{{ site.permalink_marker }}{% if post.title %}</li>
+<li><a class="u-in-reply-to" href="{{ post.in-reply-to-url }}">{{ page.in-reply-to-url }}</a></li>
+<ul>
 </footer>
+</article>
 <!--End Post "{% include logic/pp-title.html %}"-->
