Initial notes format now working.

--- a/_includes/content-note.html
+++ b/_includes/content-note.html
@@ -5,8 +5,10 @@
 </section>
 <footer>
 <ul>
-<li><time class="dt-published" datetime="{% include logic/pp-date-xml.html %}">{% include logic/pp-date-str.html %}</time> &bull; {% if post.date %}<a rel="bookmark" class="u-url" href="{% include logic/pp-url.html %}">{% endif %}{{ site.permalink_marker }}{% if post.date %}</a>{% endif %}</li>
-<li><a class="u-in-reply-to" href="{{ post.in-reply-to-url }}">{{ post.in-reply-to-url }}</a></li>
+<li>
+	<time class="dt-published" datetime="{{ post.date | date_to_xml }}">{{ post.date | date_to_string }}</time> &bull; <a rel="bookmark" class="u-url" href="{% include logic/pp-url.html %}">{{ site.permalink_marker }}</a>
+</li>
+<li>RE: <a class="u-in-reply-to" href="{{ post.in-reply-to-url }}">{{ post.in-reply-to-title }}</a></li>
 </ul>
 </footer>
 </article>
