--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 asides: true
 tagbox: true
+footer: true
 ---
 <!-- ================================================================ -->
 <!-- Post -->
