Switched over to h-card

--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -10,9 +10,9 @@ footer: false
 {% include logic/pp-content.html %}
 </section>
 <footer>
-<ul class="vcard">
-<li><img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="img-polaroid photo" alt="A picture of me!"></li>
-<li><a class="fn url" href="/about">{{ site.author }}</a></li>
+<ul class="h-card">
+<li><img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="img-polaroid u-photo" alt="A picture of me!"></li>
+<li><a class="fn u-url p-name" href="/about">{{ site.author }}</a></li>
 </ul>
 <ul>
 <li>
