--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -10,10 +10,10 @@ footer: false
 {% include logic/pp-content.html %}
 </section>
 <footer>
-<ul class="h-card">
-<li><img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="img-polaroid u-photo" alt="A picture of me!"></li>
-<li><a class="fn u-url p-name p-author" href="/about">{{ site.author }}</a></li>
-</ul>
+<div class="h-card">
+<img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="img-polaro/id u-photo" alt="A picture of me!">
+<a class="fn u-url p-name p-author" href="/about">{{ site.author }}</a>
+</div>
 <ul>
 <li>
 	<time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">
