updated dom structure again

--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -6,9 +6,9 @@ footer: false
 ---
 <!--Begin note "{% include logic/pp-title.html %}"-->
 <article class="note h-entry">
-<section class="e-content p-summary p-name">
+<div class="e-content p-summary p-name">
 {% include logic/pp-content.html %}
-</section>
+</div>
 <footer>
 <div class="h-card">
 <img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="img-polaro/id u-photo" alt="A picture of me!">
