--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -6,12 +6,13 @@ footer: false
 ---
 <!--Begin note "{% include logic/pp-title.html %}"-->
 <article class="note h-entry">
-<header>
-<div class="h-card">
-<img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="img-polaro/id u-photo" alt="A picture of me!">
-<a class="fn u-url p-name p-author" href="/about">{{ site.author }}</a>
-</div>
-<ul>
+<section class="e-content p-summary p-name">
+{% include logic/pp-content.html %}
+</section>
+<footer>
+<ul class="h-card">
+<li><img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="img-polaroid u-photo" alt="A picture of me!"></li>
+<li><a class="fn u-url p-name p-author" href="/about">{{ site.author }}</a></li>
 <li>
 	<time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">
 		{{ page.date | date_to_string }}
@@ -21,9 +22,6 @@ footer: false
 	RE: <a class="u-in-reply-to" href="{{ page.in-reply-to-url }}">{{ page.in-reply-to-title }}</a>
 </li>
 </ul>
-</header>
-<div class="e-content p-summary p-name">
-{% include logic/pp-content.html %}
-</div>
+</footer>
 </article>
 <!--End Post "{% include logic/pp-title.html %}"-->
