Fixed URL in hcard

--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -12,7 +12,7 @@ footer: false
 <footer>
 <ul class="h-card p-author">
 <li><img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="img-polaroid u-photo" alt="A picture of me!"></li>
-<li><a class="fn u-url p-name" href="/about">{{ site.author }}</a></li>
+<li><a class="u-url p-name" href="http://{{ site.url }}/about">{{ site.author }}</a></li>
 </ul>
 <ul>
 <li>
