I guess I REALLY need a url

--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -13,6 +13,7 @@ footer: false
 <ul class="h-card p-author">
 <li><img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="img-polaroid u-photo" alt="A picture of me!"></li>
 <li><a class="p-name fn u-url url" href="http://{{ site.url }}/about">{{ site.author }}</a></li>
+<a class="u-url" href="http://{{ site.url }}/about"><!-- This is here to force the hand of your MF2 parser --></a>
 </ul>
 <ul>
 <li>
