--- a/_includes/content-note.html
+++ b/_includes/content-note.html
@@ -8,6 +8,7 @@
 <section class="e-content p-summary p-name span10">
 <a class="u-in-reply-to" href="{{ post.in-reply-to-url }}">@{{ post.in-reply-to-title }}</a>
 {% include logic/pp-content.html %}
+{% if post.rsvp %}<data class="p-rsvp" value="{{ post.rsvp }}">I'm RSVPing "{{ post.rsvp }}"</data>{% endif %}
 </section>
 </article>
 <!--End Post "{% include logic/pp-title.html %}"-->
