Implemented a fix for the logic folder
I used to have to use includes to save on code but
now I can use the same name for the posterator as
I do for the pages.  Hopefully I will never have 
to think about this shit any longer.

--- a/_includes/posterator.html
+++ b/_includes/posterator.html
@@ -1,5 +1,5 @@
-{% for post in paginator.posts %}
-{% case post.layout %}
+{% for page in paginator.posts %}
+{% case page.layout %}
 {% when 'post' %}
 {% include content-post.html %}
 {% when 'linklog' %}
