--- a/_includes/content-note.html
+++ b/_includes/content-note.html
@@ -1,14 +1,14 @@
-<!--Begin note "{% include logic/pp-title.html %}"-->
+<!--Begin note "{{ page.title }}"-->
 <article class="note h-entry row">
 	<header class="span2">
-		<time class="dt-published" datetime="{{ post.date | date_to_xml }}">{{ post.date | date_to_string }}</time> &bull; <a rel="bookmark" class="u-url" href="{% include logic/pp-url.html %}">{{ site.permalink_marker }}</a>
+		<time class="dt-published" datetime="{{ page.date | date_to_xml }}">{{ page.date | date_to_string }}</time> &bull; <a rel="bookmark" class="u-url" href="{% include logic/pp-url.html %}">{{ site.permalink_marker }}</a>
 	</li>
 	</ul>
 	</header>
 <section class="e-content p-summary p-name span10">
-<a class="u-in-reply-to" href="{{ post.in-reply-to-url }}">@{{ post.in-reply-to-title }}</a>
+<a class="u-in-reply-to" href="{{ page.in-reply-to-url }}">@{{ page.in-reply-to-title }}</a>
 {% include logic/pp-content.html %}
-{% if post.rsvp %}<data class="p-rsvp" value="{{ post.rsvp }}">I'm RSVPing "{{ post.rsvp }}"</data>{% endif %}
+{% if page.rsvp %}<data class="p-rsvp" value="{{ page.rsvp }}">I'm RSVPing "{{ page.rsvp }}"</data>{% endif %}
 </section>
 </article>
-<!--End Post "{% include logic/pp-title.html %}"-->
+<!--End Post "{{ page.title }}"-->
