--- a/_includes/content-post.html
+++ b/_includes/content-post.html
@@ -1,19 +1,19 @@
-<!--Begin Post "{% include logic/pp-title.html %}"-->
+<!--Begin Post "{{ page.title }}"-->
 <article class="post h-entry">
 <header>
 <hgroup>
 <h1 class="p-name">
-{% if post.title %}<a href="{% include logic/pp-url.html %}" rel="bookmark">{% endif %}{% include logic/pp-title.html %}{% if post.title %}</a>{% endif %}
+<a href="{{ page.url }}" rel="bookmark">{{ page.title }}</a>
 </h1>
 <h2><small>
-<time class="dt-published" datetime="{% include logic/pp-date-xml.html %}">{% include logic/pp-date-str.html %}</time>
+<time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_string }}</time>
 </small></h2>
 {% include logic/pp-post-author.html %}
 </hgroup>
 </header>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 <section class="e-content p-summary">
-{% include logic/pp-content.html %}
+{{ page.content }}
 </section>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 {% include logic/pp-post-footer.html %}
