--- a/_includes/content-note.html
+++ b/_includes/content-note.html
@@ -1,13 +1,22 @@
 <!--Begin note "{{ page.title }}"-->
 <article class="note h-entry row">
 	<header class="span2">
-		<time class="dt-published" datetime="{{ page.date | date_to_xml }}">{{ page.date | date_to_string }}</time> &bull; <a rel="bookmark" class="u-url" href="{% include logic/pp-url.html %}">{{ site.permalink_marker }}</a>
-	</li>
-	</ul>
+	<div class="h-card p-author">
+	<p><img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="img-polaroid u-photo" alt="A picture of me!"></p>
+	<p><a class="p-name fn" href="http://{{ site.url }}">{{ site.author }}</a></p>
+	<p><a class="u-url url" href="http://{{ site.url }}">{{ site.url }}<!-- This is here to force the hand of your MF2 parser --></a></p>
+	</div>
+	<div>
+	<p>
+		<time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">
+			{{ page.date | date_to_string }}
+		</time> &bull; <a rel="bookmark" class="u-url" href="{{ page.url }}">{{ site.permalink_marker }}</a>
+	</p>
+	</p>
+	</div>
 	</header>
 <section class="e-content p-summary p-name span10">
-<a class="u-in-reply-to" href="{{ page.in-reply-to-url }}">@{{ page.in-reply-to-title }}</a>
-{% include logic/pp-content.html %}
+<a class="u-in-reply-to" href="{{ page.in-reply-to-url }}">@{{ page.in-reply-to-title }}</a>{% include content-switch.html %}
 {% if page.rsvp %}<data class="p-rsvp" value="{{ page.rsvp }}">I'm RSVPing "{{ page.rsvp }}"</data>{% endif %}
 </section>
 </article>
