--- a/assets/css/mods.css
+++ b/assets/css/mods.css
@@ -99,6 +99,10 @@ article.linklog-marker {
 	color: rgb(153, 153, 153);
 }
 
+/* Note Specifics 
+-------------------------------------------------- */
+
+
 /* Assides
 -------------------------------------------------- */
 /* Resize of the linklog Title */
