--- a/_includes/content-note.html
+++ b/_includes/content-note.html
@@ -1,23 +1,27 @@
 <!--Begin note "{{ page.title }}"-->
 <article class="note h-entry row">
 	<header class="span2">
-	<div class="h-card p-author">
-	<p><img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="img-polaroid u-photo" alt="A picture of me!"></p>
-	<p><a class="p-name fn" href="http://{{ site.url }}">{{ site.author }}</a></p>
-	<p><a class="u-url url" href="http://{{ site.url }}">{{ site.url }}<!-- This is here to force the hand of your MF2 parser --></a></p>
-	</div>
 	<div>
-	<p>
+	<p class="muted">
 		<time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">
 			{{ page.date | date_to_string }}
-		</time> &bull; <a rel="bookmark" class="u-url" href="{{ page.url }}">{{ site.permalink_marker }}</a>
+		</time> &bull; {% if content %}{% else %}<a rel="bookmark" class="u-url" href="{{ page.url }}">{% endif %}{{ site.permalink_marker }}{% if content %}{% else %}</a>{% endif %}
 	</p>
 	</p>
 	</div>
 	</header>
-<section class="e-content p-summary p-name span10">
+<section class="e-content p-summary p-name span8">
 <a class="u-in-reply-to" href="{{ page.in-reply-to-url }}">@{{ page.in-reply-to-title }}</a>{% include content-switch.html %}
 {% if page.rsvp %}<data class="p-rsvp" value="{{ page.rsvp }}">I'm RSVPing "{{ page.rsvp }}"</data>{% endif %}
 </section>
+    {% if content %}
+<footer class="span2">
+	<div class="h-card p-author">
+	<p><img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="img-polaroid u-photo" alt="A picture of me!"></p>
+	<p><a class="p-name fn muted" href="http://{{ site.url }}">{{ site.author }}</a></p>
+	<p><a class="u-url url muted" href="http://{{ site.url }}">{{ site.url }}<!-- This is here to force the hand of your MF2 parser --></a></p>
+	</div>
+</footer>
+	{% endif %}
 </article>
 <!--End Post "{{ page.title }}"-->
