Getting posts ready for syndication

--- a/_includes/content-note.html
+++ b/_includes/content-note.html
@@ -11,7 +11,7 @@
 	</div>
 	</header>
 <section class="e-content p-summary p-name span8">
-<a class="u-in-reply-to" href="{{ page.in-reply-to-url }}">@{{ page.in-reply-to-title }}</a>{% include content-switch.html %}
+<a class="u-in-reply-to" href="{{ page.in-reply-to-url }}">@{{ page.in-reply-to-title }}</a>{% include content_switch.html %}
 {% if page.rsvp %}<data class="p-rsvp" value="{{ page.rsvp }}">I'm RSVPing "{{ page.rsvp }}"</data>{% endif %}
 </section>
     {% if content %}
