--- a/_includes/content-post.html
+++ b/_includes/content-post.html
@@ -13,7 +13,7 @@
 </header>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 <section class="e-content p-summary">
-{% include content-switch.html %}
+{% include content_switch.html %}
 </section>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 {% include post_footer.html %}
