--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,4 +1,5 @@
 {% if post.tagbox or page.tagbox == true  %}<footer>
     {% include tag_box.html %}
 	{% include post_crumb.html %}
+	{% include syndicate_box.html %}
 </footer>{% endif %}
