--- a/_includes/content-test.html
+++ b/_includes/content-test.html
@@ -12,7 +12,7 @@
 </header>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 <section class="e-content p-summary">
-{% include content-switch.html %}
+{% include content_switch.html %}
 </section>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 {% include post_footer.html %}
