--- a/_includes/post_author.html
+++ b/_includes/post_author.html
@@ -1,3 +1,2 @@
-{% if post %}{% if post.author %}<meta class="p-author h-card" content="{{ post.author }}"/><% else %>{% if site.author %}<meta class="p-author h-card" content="{{ site.author }}"/>{% endif %}{% endif %}{% elsif page.author %}<h3 class="author p-author h-card"><small>{{ page.author }}  &bull; <a class="u-url url muted" href="http://{{ site.url }}">{{ site.url }}</a></small>
-<data src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="u-photo"></data></h3>{% else %}{% if site.author %}<h3 class="author p-author h-card"><small>{{ site.author }}  &bull; <a class="u-url url muted" href="http://{{ site.url }}">{{ site.url }}</a></small>
-<data src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="u-photo"></data></h3>{% endif %}{% endif %}
+<h3 class="author p-author h-card"><small><a class="p-name fn muted" href="http://{{ site.url }}">{{ site.author }}</a>  &bull; <a class="u-url url muted" href="http://{{ site.url }}">{{ site.url }}</a></small>
+<meta src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="u-photo"></h3>
