Okay, img it is!

--- a/_includes/post_author.html
+++ b/_includes/post_author.html
@@ -1,2 +1,2 @@
-<h3 class="author p-author h-card"><small><a class="p-name fn muted" href="http://{{ site.url }}">{{ site.author }}</a>  &bull; <a class="u-url url muted" href="http://{{ site.url }}">{{ site.url }}</a></small>
-<meta src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="u-photo"></h3>
+<h3 class="author p-author h-card"><img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="u-photo img-circle" width="48" height="48">
+<small><a class="p-name fn muted" href="http://{{ site.url }}">{{ site.author }}</a>  &bull; <a class="u-url url muted" href="http://{{ site.url }}">{{ site.url }}</a></small></h3>
