--- a/_includes/css.html
+++ b/_includes/css.html
@@ -1,9 +1,9 @@
     <!-- Le styles -->
-    <link href="/components/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/components/bootstrap/docs/assets/css/bootstrap.css" rel="stylesheet">
     <!-- Bootstrap modifications reside between bootstrap.min.css and bootstrap-responsive.min.css-->
     <link href="/assets/css/mods.css" rel="stylesheet">
     <link href="/assets/css/syntax.css" rel="stylesheet">
-    <link href="/components/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="/components/bootstrap/docs/assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link rel="alternate" type="application/atom+xml" title="Atom" href="/atom.xml" />
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
